Changes on navigation menu and animation of it

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                     <div class="nav-bar-overlay"></div>
 
                     <div class="over-nav-bar-overlay">
-                        <i class="fa-solid fa-x nav"></i>
+                        <div class="nav-link">
+                            <div class="nav-link-overlay"></div>
+                            <i class="fa-solid fa-x nav"></i>
+                        </div>
                         <div class="nav-link">
                             <div class="nav-link-overlay"></div>
                             <a href="#" class="link">BOOKS</a>
@@ -42,6 +45,14 @@
                         <div class="nav-link">
                             <div class="nav-link-overlay"></div>
                             <a href="#" class="link">MY BOOKS</a>
+                        </div>
+                        <div class="nav-link">
+                            <div class="nav-link-overlay"></div>
+                            <a href="#" class="link">Wishlist</a>
+                        </div>
+                        <div class="nav-link">
+                            <div class="nav-link-overlay"></div>
+                            <a href="#" class="link">Cart</a>
                         </div>
                     </div>
                 </div>
